Infer coursework count for weighting prep and update template

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
         <div class="hint">
           If workbook includes <code>Exam Child</code> + <code>Coursework Child</code>,
           merge reads both and outputs one combined upload file named <code>_upload.xls</code> (CSV content).
+          Coursework count is inferred from Blackboard headers (<code>{00x}{MODULE}</code>), and weighting cells are auto-prepared for that count.
         </div>
       </div>
     </section>
